--- a/sections/affiliatelanding-page.liquid
+++ b/sections/affiliatelanding-page.liquid
@@ -8,9 +8,7 @@
   href="{{ 'component-rte.css' | asset_url }}"
   media="print"
   onload="this.media='all'" />
-<script
-  src="https://kit.fontawesome.com/6f1926112a.js"
-  crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/6f1926112a.js" crossorigin="anonymous"></script>
 {{ "affiliate.css" | asset_url | stylesheet_tag }}
 
 <noscript>{{ "section-main-page.css" | asset_url | stylesheet_tag }}</noscript>
@@ -18,10 +16,8 @@
 <noscript>{{ "affiliate.css" | asset_url | stylesheet_tag }}</noscript>
 {% assign poster_image = page.metafields.custom.hero_video_poster_image %}
 {% assign hero_video = page.metafields.custom.video_upload_for_hero_background_video %}
-<div
-  class="affiliate-hero">
-  <div
-    class="video-wrapper">
+<div class="affiliate-hero">
+  <div class="video-wrapper">
     <video
       playsinline
       autoplay
@@ -31,12 +27,9 @@
       poster="{{ poster_image | file_url }}"
       class="bgvid"
       id="saunavid">
-      <source
-        src="{{ hero_video | file_url }}"
-        type="video/mp4">
+      <source src="{{ hero_video | file_url }}" type="video/mp4">
     </video>
-    <div
-      class="header-video">
+    <div class="header-video">
       <h2>
         Welcome Friends<br/>
         Of
@@ -47,8 +40,7 @@
           {{ page.metafields.custom.affiliate_last_name }}
         {% endunless %}
       </h2>
-      <p
-        class="mono-type text-uppercase">
+      <p class="mono-type text-uppercase">
         {% unless page.metafields.custom.affiliate_discount_code_percent == blank %}
           Enjoy
           {{ page.metafields.custom.affiliate_discount_code_percent }}
@@ -59,21 +51,15 @@
         {% endunless %}
       </p>
       {% unless page.metafields.custom.shop_now_link == blank %}
-        <a
-          class="btn btn-affiliate"
-          href="{{ page.metafields.custom.shop_now_link }}">SHOP NOW</a>
+        <a class="btn btn-affiliate" href="{{ page.metafields.custom.shop_now_link }}">SHOP NOW</a>
       {% endunless %}
     </div>
   </div>
 </div>
-<div
-  class="hero-icons">
-  <div
-    class="container">
-    <div
-      class="row">
-      <div
-        class="col-3 col-6-sm hero-box">
+<div class="hero-icons">
+  <div class="container">
+    <div class="row">
+      <div class="col-3 col-6-sm hero-box">
         <img
           src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/emf-protected.png?v=1684787266"
           alt="EMF Protection"
@@ -83,8 +69,7 @@
           Block out environmental stressors and disconnect from the world.
         </p>
       </div>
-      <div
-        class="col-3 col-6-sm hero-box">
+      <div class="col-3 col-6-sm hero-box">
         <img
           src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/faster-sessions.png?v=1684787266"
           alt="Faster Sessions"
@@ -94,8 +79,7 @@
           Full-spectrum infrared therapy helps you sweat faster and better than traditional saunas.
         </p>
       </div>
-      <div
-        class="col-3 col-6-sm hero-box">
+      <div class="col-3 col-6-sm hero-box">
         <img
           src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/portability.png?v=1684787266"
           alt="Portability"
@@ -105,8 +89,7 @@
           Save space with a compact sauna that stows away in minutes
         </p>
       </div>
-      <div
-        class="col-3 col-6-sm hero-box">
+      <div class="col-3 col-6-sm hero-box">
         <img
           src="https://cdn.shopify.com/s/files/1/0026/7229/6025/files/built-to-last.png?v=1684787266"
           alt="Built-to-last"
@@ -119,43 +102,31 @@
     </div>
   </div>
 </div>
-<div
-  class="affiliate-why">
-  <div
-    class="container">
-    <div
-      class="inner-content row">
-      <div
-        class="col-5 col-12-sm">
-        <div
-          class="affiliate-box">
-          <h2
-            class="text-uppercase">Why
+<div class="affiliate-why">
+  <div class="container">
+    <div class="inner-content row">
+      <div class="col-5 col-12-sm">
+        <div class="affiliate-box">
+          <h2 class="text-uppercase">Why
             {% unless page.metafields.custom.affiliate_first_name == blank %}
               {{ page.metafields.custom.affiliate_first_name }}
             {% endunless %}
             Loves SaunaSpace</h2>
-          <p
-            class="font-left mono-type">
+          <p class="font-left mono-type">
             {% unless page.metafields.custom.affiliate_quote == blank %}
               {{ page.metafields.custom.affiliate_quote }}
             {% endunless %}
           </p>
 
           {% unless page.metafields.custom.shop_now_link == blank %}
-            <a
-              class="btn btn-affiliate"
-              href="{{ page.metafields.custom.shop_now_link }}">SHOP NOW</a>
+            <a class="btn btn-affiliate" href="{{ page.metafields.custom.shop_now_link }}">SHOP NOW</a>
           {% endunless %}
         </div>
       </div>
-      <div
-        class="col-7 col-12-sm yt-wrapper">
-        <div
-          class="image-wrapper">
+      <div class="col-7 col-12-sm yt-wrapper">
+        <div class="image-wrapper">
           {% unless page.metafields.custom.affiliate_youtube_video == blank %}
-            <href="{{page.metafields.custom.affiliate_youtube_video}}"
-              target="_blank">
+            <href="{{page.metafields.custom.affiliate_youtube_video}}" target="_blank">
             {% endunless %}
             {% assign file_object = page.metafields.custom.affiliate_youtube_link_image %}
             <!-- replace the "set_test" part with your actual namespace and the "file" with the key -->
@@ -176,98 +147,73 @@
   </div>
 </div>
 
-
-<div
-  class="podcast">
-  <div
-    class="container">
-    <div
-      class="row">
-      <div
-        class="col-6">
-        {% assign podcast_image = page.metafields.custom.podcast_image %}
-        <!-- replace the "set_test" part with your actual namespace and the "file" with the key -->
-        {% if podcast_image != blank %}
-          <img
-            src="{{ podcast_image | file_url }}"
-            alt=""
-            class="image-podcast"
-            lazy>
-        {% endif %}
-      </div>
-      <div
-        class="col-6">
-        <h2
-          class="text-uppercase">Listen to
-          {% unless page.metafields.custom.affiliate_first_name == blank %}
-            {{ page.metafields.custom.affiliate_first_name }}
+{% if page.metafields.custom.spotify_podcast_link != blank or page.metafields.custom.youtube_podcast_link != blank or page.metafields.custom.youtube_podcast_link != blank %}
+  <div class="podcast">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          {% assign podcast_image = page.metafields.custom.podcast_image %}
+          <!-- replace the "set_test" part with your actual namespace and the "file" with the key -->
+          {% if podcast_image != blank %}
+            <img
+              src="{{ podcast_image | file_url }}"
+              alt=""
+              class="image-podcast"
+              lazy>
+          {% endif %}
+        </div>
+        <div class="col-6">
+          <h2 class="text-uppercase">Listen to
+            {% unless page.metafields.custom.affiliate_first_name == blank %}
+              {{ page.metafields.custom.affiliate_first_name }}
+            {% endunless %}
+            and Brian</h2>
+          <p>
+            Deep dive into mental performance and optimizing lifestyle
+          </p>
+          {% unless page.metafields.custom.apple_podcast_link == blank %}
+            <div class="btn-podcast">
+              <a href="{{page.metafields.custom.apple_podcast_link}}" target="_blank">
+                <div class="icon-wrapper">
+                  <i class="fa-solid fa-podcast"></i>
+                </div>
+                <span class="">Listen on<br/><strong>Apple Podcast</strong>
+                </span>
+              </a>
+            </div>
           {% endunless %}
-          and Brian</h2>
-        <p>
-          Deep dive into mental performance and optimizing lifestyle
-        </p>
-        {% unless page.metafields.custom.apple_podcast_link == blank %}
-          <div
-            class="btn-podcast">
-            <a
-              href="{{page.metafields.custom.apple_podcast_link}}"
-              target="_blank">
-              <div
-                class="icon-wrapper">
-                <i
-                  class="fa-solid fa-podcast"></i>
-              </div>
-              <span
-                class="">Listen on<br/><strong>Apple Podcast</strong>
-              </span>
-            </a>
-          </div>
-        {% endunless %}
-        {% unless page.metafields.custom.spotify_podcast_link == blank %}
-          <div
-            class="btn-podcast">
-            <a
-              href="{{page.metafields.custom.spotify_podcast_link}}"
-              target="_blank">
-              <div
-                class="icon-wrapper">
-                <i
-                  class="fa-brands fa-spotify"></i>
-              </div>
-              <span>Listen on<br/><strong>Spotify</strong>
-              </span>
-            </a>
-          </div>
-        {% endunless %}
-        {% unless page.metafields.custom.youtube_podcast_link == blank %}
-          <div
-            class="btn-podcast">
-            <a
-              href="{{page.metafields.custom.youtube_podcast_link}}"
-              target="_blank">
-              <div
-                class="icon-wrapper">
-                <i
-                  class="fa-brands fa-youtube"></i>
-              </div>
-              <span>Watch on<br/><strong>YouTube</strong>
-              </span>
-            </a>
-          </div>
-        {% endunless %}
+          {% unless page.metafields.custom.spotify_podcast_link == blank %}
+            <div class="btn-podcast">
+              <a href="{{page.metafields.custom.spotify_podcast_link}}" target="_blank">
+                <div class="icon-wrapper">
+                  <i class="fa-brands fa-spotify"></i>
+                </div>
+                <span>Listen on<br/><strong>Spotify</strong>
+                </span>
+              </a>
+            </div>
+          {% endunless %}
+          {% unless page.metafields.custom.youtube_podcast_link == blank %}
+            <div class="btn-podcast">
+              <a href="{{page.metafields.custom.youtube_podcast_link}}" target="_blank">
+                <div class="icon-wrapper">
+                  <i class="fa-brands fa-youtube"></i>
+                </div>
+                <span>Watch on<br/><strong>YouTube</strong>
+                </span>
+              </a>
+            </div>
+          {% endunless %}
+        </div>
       </div>
     </div>
   </div>
-</div>
+{% endif %}
 
-<div
-  class="affiliate-products">
-  <div
-    class="container">
-    <div
-      class="row">
-      <h2
-        class="text-uppercase">
+<div class="affiliate-products">
+  <div class="container">
+    <div class="row">
+      <h2 class="text-uppercase">
         {% unless page.metafields.custom.affiliate_first_name == blank %}
           {{ page.metafields.custom.affiliate_first_name }}
         {% endunless %}'s Favorite Products</h2>
@@ -276,16 +222,15 @@
     {% assign customrecommendations = page.metafields.custom.product_recommendations.value %}
 
     {% if customrecommendations != blank %}
-      <div
-        class="product-tiles">
+      <div class="product-tiles">
 
         <ul
           id="product-grid"
           data-id="{{ section.id }}"
           class=" grid product-grid grid--{{ section.settings.columns_mobile }}-col-tablet-down
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      {% if section.settings.columns_desktop == 1 %} grid--full-width{% else %}
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      grid--{{ section.settings.columns_desktop }}-col-desktop
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      {% endif %}">
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          {% if section.settings.columns_desktop == 1 %} grid--full-width{% else %}
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          grid--{{ section.settings.columns_desktop }}-col-desktop
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          {% endif %}">
           {% for singlerecommendation in customrecommendations %}
 
             {% assign lazy_load = false %}
@@ -293,8 +238,7 @@
               {%- assign lazy_load = true -%}
             {%- endif -%}
 
-            <li
-              class="featured-grid">
+            <li class="featured-grid">
               {% render 'card-product-simple'
                , card_product: singlerecommendation,
                media_aspect_ratio: section.settings.image_ratio,
@@ -310,11 +254,8 @@
 
     {% endif %}
     {% unless page.metafields.custom.shop_now_link == blank %}
-      <p
-        class="product-shop-all">
-        <a
-          href="{{ page.metafields.custom.shop_now_link }}"
-          class="bold-link arrow-link">Shop All</a>
+      <p class="product-shop-all">
+        <a href="{{ page.metafields.custom.shop_now_link }}" class="bold-link arrow-link">Shop All</a>
       </p>
     {% endunless %}
   </div>
