--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -340,8 +340,8 @@
       <div class="popup-overlay"></div>
       <div class="popup-content">
         <a href="#" class="close-popup" data-id="popup_default">&times;</a>
-        <h2>Customer-Arranged Shipment Using Your Shipper</h2></br>
-        The SaunaSpace Team will reach out when the order is ready, and then the customer will arrange and pay for the shipping of their product with the carrier of their choice. Click <a href="https://sauna.space/pages/shipping-and-returns" target="_blank">Here</a> for more details.
+        <h2>Customer-Arranged Shipping</h2></br>
+        We will contact you via email when your order is ready for pickup. You will then arrange your order's pickup and shipment using your preferred shipping carrier. <a href="https://sauna.space/pages/shipping-and-returns" target="_blank">Learn more</a> about how this works.
       </div>
     </div>
 
